new PATCH report endpoint, Authorization should be functional but needs some tweaks
